--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,17 +20,12 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
+      # Set up Python
       - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
 
-      # Runs a set of commands using the runners shell
-      - name: Install unittest
-        run: |
-          python -m pip install --upgrade pip
-          pip install unittest
-          
+      # Runs tests         
       - name: Run tests
         run: python -m unittest test_kata.py
